<resources>
    <!-- Application Name -->
    <string name="appName">A-to-B</string>
    <!-- Activity Title -->
    <string name="aboutTitle">Über A2B</string>
    <string name="resultTitle">Verbindungen</string>
    <string name="resultDetailTitle">Detail</string>
    <string name="favoriteTitle">Favoriten</string>

    <string name="actionMain">Fahrplan</string>
    <string name="actionFavorite">Favoriten</string>
    <string name="actionAbout">Über</string>

    <!-- Preference Key -->
    <string name="sharePreferenceKey">hsr.rafurs.a2b.preferenceFile</string>

    <!-- Main Activity -->
    <string name="fromLabelText">von:</string>
    <string name="fromHintText">Abfahrtsort</string>

    <string name="toLabelText">nach:</string>
    <string name="toHintText">Ankunftsort</string>

    <string name="viaLabelText">via:</string>
    <string name="viaHintText">via</string>

    <string name="errorMessageFromIsEmpty">Abfahrtsort darf nicht leer sein!</string>
    <string name="errorMessageToIsEmpty">Abfahrtsort darf nicht leer sein!</string>
    <string name="errorMessageConnection">Verbindungsfehler:</string>
    <string name="pleaseWaitTitle">Bitte warten</string>
    <string name="pleaseWaitSearchMsg">Verbindungen werden gesucht.</string>
    <string name="pleaseWaitLocationMsg">Position wird ermittelt.</string>
    <string name="pleaseWaitSearchError">Keine Verbindung gefunden...</string>
    <string name="pleaseWaitLocationError">Keine Position gefunden...</string>
    <string name="mainOppositeDirectionText">Gegenrichtung</string>
    <string name="mainSearchConnectionsText">Verbindungen suchen</string>

    <string name="btnDateDefaultText">01.01.1970</string>
    <string name="btnTimeDefaultText">12:00</string>
    <string name="refreshDateTimeButtonText">RefreshButtonImage</string>
    <string name="btnArrivalsText">AN</string>
    <string name="btnDepartureText">AB</string>
    <string name="action_settings">Settings</string>

    <string name="resultTextFromStation">Abfahrtsort</string>
    <string name="resultTextDate">01.01.1970</string>
    <string name="resultTextToStation">Ankunftsort</string>
    <string name="resultTextTime">12:00</string>
    <string name="imgBtnShowDetailConnectionDesc">imgBtnShowDetailConnectionDesc</string>

    <!-- About Activity -->
    <string name="labelAboutTitleText">Info über A2B</string>
    <string name="aboutNameR">Raffael Zaghet</string>
    <string name="aboutMailR">raffael.zaghet@gmail.com</string>
    <string name="aboutCopyRText">(c) Comics</string>
    <string name="aboutNameU">Urs Sommerhalder</string>
    <string name="aboutMailU">info@sumali.ch</string>
    <string name="aboutCopyUText">(c) App-Icon</string>
    <string name="aboutImgRaDesc">Bild Raffael</string>
    <string name="aboutImgUrDesc">Bild Urs</string>
    <string name="aboutDiscTitle">Über das Projekt:</string>
    <string name="aboutDiscText">Diese App ist im Rahmen des Faches \"Software Engineering für Mobile Plattformen\" entstanden. \nDie Installation und Nutzung erfolgt auf eigene Gefahr.</string>
    <string name="aboutCopyTitle">Copyright:</string>
    <string name="aboutCopyOtherIcoUserText">Android Icon Pack</string>
    <string name="aboutCopyOterIcoText">weitere Icons</string>
    <string name="aboutCopyFavIcoUserText">Icons4Android \n(http://www.icons4android.com)</string>
    <string name="aboutCopyFavIcoText">Favoriten Icon</string>
    <string name="descriptionGpsButton">ruft die aktuelle Position ab</string>
    <string name="aboutVersionTitleText">Version:</string>
    <string name="aboutAppVersText">Versionsname</string>
    <string name="aboutAppVersNameText">x.x.x</string>
    <string name="aboutAppVersionText">Version</string>
    <string name="aboutAppVersionNameText">2.1</string>

    <!-- Using in Result and Result-Detail -->
    <string name="textFromStationTitle">von:</string>
    <string name="textDateTitle">am:</string>
    <string name="textToStationTitle">nach:</string>
    <string name="textTimeTitle">um:</string>
    <string name="detailErrorTextTitle">Hopperla...</string>
    <string name="detailErrorTextMsg">Hier ging etwas nicht wie gewünscht. Versuche es doch nochmals, vielleicht hast Du im zweiten Anlauf mehr Glück.</string>
    <string name="textFromStationTime">Abfahrt:</string>
    <string name="textToStationTime">Ankunft:</string>
    <string name="textFormToStationPlatform">Gleis:</string>
    <string name="textDetailTitle">Verbindungsdetails: </string>
    <string name="imgButShareConnection">Share Verbindung</string>
    <string name="textFavoriteHint">Klicken: Verbindung suchen\nLang Klicken: Favorit löschen</string>
    <string name="textFormDepartureName">Abfahrtsort</string>
    <string name="textFormArrivalName">Ankunftsort</string>

    <!-- Search Result Fragment -->
    <string name="addFavoriteSuccess">Favorit erfolgreich gespeichert.</string>
    <string name="addFavoriteError">Favorit wurde nicht gespeichert.</string>
    <string name="deleteFavoriteMessage">Favorit wurde gelöscht...</string>
    <string name="resultTitleFromTime">Ab</string>
    <string name="resultTitleToTime">An</string>
    <string name="resultTitleDuration">Dauer</string>
    <string name="resultTitleTransfers">Umst</string>
    <string name="resultTitlePlatform">Gleis</string>
    <string name="liDetFromStation">Abfahrt</string>
    <string name="liDetFromStationTime">Ab: </string>
    <string name="liDetFromStationPlatform">Gleis: </string>
    <string name="liDetJourneyName">ICN:506</string>
    <string name="liDetToStation">Ankunft</string>
    <string name="liDetToStationTime">An: </string>
    <string name="liDetToStationPlatform">Gleis: </string>
    <string name="liDetWalkingInfo">Fussweg: </string>

    <string name="lvriFromTime">00:00</string>
    <string name="lvriToTime">00:00</string>
    <string name="lvriDuration">00:00</string>
    <string name="lvriTransfers">0</string>
    <string name="lvriPlatform">0</string>
    <string name="lvriDelay">Info</string>
    <string name="lvriFirstClass">1: **</string>
    <string name="lvriSecondClass">2: ***</string>

</resources>
