<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="30dp"
    android:padding="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriFromTime"
                android:width="60dp"
                android:text="@string/lvriFromTime"
                android:textSize="14dp"
                android:minHeight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriToTime"
                android:width="60dp"
                android:text="@string/lvriToTime"
                android:textSize="14dp"
                android:minHeight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriDuration"
                android:width="60dp"
                android:text="@string/lvriDuration"
                android:minHeight="20dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:autoText="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriTransfers"
                android:width="40dp"
                android:text="@string/lvriTransfers"
                android:minHeight="20dp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriPlatform"
                android:text="@string/lvriPlatform"
                android:minHeight="20dp"
                android:width="40dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lvriDelay"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/lvriDelay"
                android:width="100dp"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lvriFirstClass"
                android:id="@+id/lvriFristClass"
                android:layout_weight="1"
                android:width="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lvriSecondClass"
                android:id="@+id/lvriSecondClass"
                android:layout_weight="1"
                android:width="50dp" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnShowDetailConnection"
        android:src="@drawable/ic_action_next_item"
        android:nestedScrollingEnabled="false"
        android:contentDescription="@string/imgBtnShowDetailConnectionDesc" />

</LinearLayout>